# parser

./: CMakeLists.txt  Parser and Generator.md  main.cpp
include/: lit.h  rule.h  seq.h
test/: CMakeLists.txt  lit.cpp  seq.cpp
